# Modelizer

./: .gitignore  ATanDistortionTS.pt  CMakeLists.txt  ChannelKillerTS.pt  ClipperTSFinal.pt  ClipperTSr.pt  MCClipperModelTS.pt  TorchFxTS.pt
CMake/: add_sources.cmake  create_plugin.cmake
Old/CMake/: create_plugin.cmake  get_juce.cmake  get_repository.cmake
Old/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio-models/: main.py  playgrond.ipynb
audio-models/models/: models.py
audio-models/torch-models/: ChannelKillerTS.pt  ClipperTS.pt  ClipperTSr.pt  TorchFxTS.pt
modules/JUCE/Projucer.app/Contents/: CodeResources  Info.plist
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
